--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </figure>
           <!-- end figure-->
           <div class="flex-content">
-            <h1><strong>Profissionalismo</strong></h1>
+            <h2><strong>Profissionalismo</strong></h2>
             <h3>Você está no lugar certo?</h3>
           </div>
           <!-- end .flex-content-->
@@ -875,7 +875,7 @@
                 Não abandone as boas práticas
               </h2>
               Boas práticas e os melhores princípios, foram feitos para evitar erros e precisam ser praticados
-              durante os momentos de prossão.
+              durante os momentos de pressão.
             </li>
           </ul>
         </div>
